requireJS implementation modules single page setup

--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,13 @@
     <title data-bind="text: applicationName"></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/bower_components/knockout/dist/knockout.js"></script>
-    <script src="/bower_components/js-signals/dist/signals.js"></script>
-    <script src="/bower_components/crossroads/dist/crossroads.js"></script>
-    <script src="/app.js"></script>
+    <script type="text/javascript" data-main="/js/Application" src="/bower_components/requirejs/require.js"></script>
 </head>
 <body>
 <div class="container">
-    <h1 data-bind="text: applicationName"></h1>
+    <h1 data-bind="text: firstName"></h1>
 
-    <ul class="nav nav-tabs" data-bind="foreach: pages">
-        <li data-bind="css: {active: id == $root.selectedPage().id">
-            <a href="#" data-bind="text: title, click: $parent.setPage">Home</a>
-        </li>
-    </ul>
-
-    <div data-bind="if: selectedPage">
-        <h2 data-bind="text: selectedPage().title"></h2>
-    </div>
-
-    <table class="table table-condensed table-striped">
-        <thead>
-        <tr><th>Name</th><th>Address</th></tr>
-        </thead>
-        <tbody data-bind="foreach: selectedPage().users">
-        <tr>
-            <td data-bind="text: name"></td>
-            <td data-bind="text: address"></td>
-        </tr>
-        </tbody>
-    </table>
-    <!--
-    <pre data-bind="text: ko.toJSON($data, null, 2)"></pre>
-    -->
+    <user-page></user-page>
 </div>
 </body>
 </html>
