--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1 data-bind="text: firstName"></h1>
-
+    <h1 data-bind="text: appName"></h1>
     <user-page></user-page>
 </div>
 </body>
